fix(grid): fix grid-column-gap

--- a/src/blocks/skeleton/grid/_col-gap/grid_col-gap_half.scss
+++ b/src/blocks/skeleton/grid/_col-gap/grid_col-gap_half.scss
@@ -1,3 +1,3 @@
 .grid_col-gap_half {
-  grid-column-gap: calc(var(--gap) * 2);
+  grid-column-gap: calc(var(--gap) / 2);
 }
